<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/Linear_h_back_color"
        style="@style/header_height">
        <ImageView
            android:id="@+id/imv_Less_arrow"
            android:src="@drawable/back_arrow"
            style="@style/margint_top_image"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/First_screen_title_view"
            style="@style/Tile_style"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/Text_Color"
            />
        <ImageView
            android:src="@drawable/three_bars"
            style="@style/margint_top_image"
            />
    </LinearLayout>
   <LinearLayout
       android:id="@+id/Linear_Sub_container"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:paddingLeft="20dp"
       android:paddingRight="20dp"
       android:paddingTop="30dp"
       android:background="@drawable/border_color_relative">
    <LinearLayout
        android:id="@+id/select_first_song"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        >
    <EditText
android:layout_width="wrap_content"
        android:hint="@string/ED_Select_first_song"
        style="@style/ED_Bold_text"
        android:layout_weight="1"

        android:background="@drawable/calendar_week_bar"/>
        <Button
            android:layout_width="wrap_content"
            android:text="@string/But_Browse"
            android:textAllCaps="false"
            android:background="@drawable/am_pm_right_active"
            style="@style/But_Margin_ED"/>
    </LinearLayout>
       <!--secound song-->
       <LinearLayout
           android:id="@+id/select_secound_song"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_margin="10dp"
           style="@style/layout_margin_top">
           <EditText
               android:layout_width="wrap_content"
               android:hint="@string/ED_Select_Secound_song"
               style="@style/ED_Bold_text"
               android:layout_weight="1"
               android:background="@drawable/calendar_week_bar"/>
           <Button
               android:layout_width="wrap_content"
               android:text="@string/But_Browse"
               android:textAllCaps="false"
               android:background="@drawable/am_pm_right_active"
               style="@style/But_Margin_ED"/>
       </LinearLayout>
       <!--Give the combined sound namme-->
       <LinearLayout
           android:id="@+id/Combined_sound_name"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_margin="10dp"
           style="@style/layout_margin_top">

           <EditText
               android:layout_width="fill_parent"
               android:background="@drawable/calendar_week_bar"
               android:hint="@string/ED_Combined_sound_name"
               android:paddingLeft="5dp"
               style="@style/ED_Bold_text"
               />
       </LinearLayout>
       <LinearLayout
           android:id="@+id/Save_Cancle_Button"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:padding="@dimen/linear_padding"
           style="@style/layout_margin_top">
    <Button
    android:layout_width="150dp"
    android:layout_height="70dp"
    android:text="@string/But_Save"
    android:background="@drawable/save_btn_purple"
        android:layout_weight="1"
        android:textColor="@color/Save_Color"
        android:layout_marginRight="20dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        />
           <Button
               android:layout_width="150dp"
               android:layout_height="70dp"
               android:text="@string/But_Cancle"
               android:textColor="@color/Cancel_Color"
               android:background="@drawable/share_btn"
               android:layout_weight="1"
               android:textAllCaps="false"
               android:textStyle="bold"
               />
       </LinearLayout>
   </LinearLayout>
</LinearLayout>