<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--header-->
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/Linear_h_back_color"
        style="@style/header_height">
        <ImageView
            android:id="@+id/imv_Less_arrow"
            android:src="@drawable/back_arrow"
            style="@style/margint_top_image"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/First_screen_title_view"
            style="@style/Tile_style"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/Text_Color"
            />
        <ImageView
            android:src="@drawable/three_bars"
            style="@style/margint_top_image"
            />
    </LinearLayout>
    <!--Search parent-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        style="@style/padding_coontent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <EditText
                android:layout_width="wrap_content"
                android:hint="@string/Secound_screen_Ed_text"
                android:background="@drawable/calendar_week_bar"
                android:layout_weight="1"
                style="@style/ED_secound_screen"/>
            <Button
                android:layout_width="wrap_content"

                android:text="@string/But_Browse"
                android:background="@drawable/am_pm_right_active"
                style="@style/But_secound_screen"/>
        </LinearLayout>
        <!--for border purpose-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="370dp"
            android:orientation="vertical"
            android:background="@drawable/border_color_linear_layout"
            >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Secound_screen_Tv_text_Music"
            android:textAllCaps="true"
            android:background="@color/Secound_Screen_Voices_BgColor"
            android:textColor="@color/Text_Color"
            style="@style/Text_Size_Music_Voice"/>
        <LinearLayout
            android:id="@+id/first_song"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            >
            <ImageView
                android:src="@drawable/purple_music"
                style="@style/Image_height_width"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Secound_screen_Tv_text_1"
                android:layout_gravity="center_vertical"
                style="@style/music_name_textviews"
               />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/Secound_secreen_View_Color"/>
        <LinearLayout
            android:id="@+id/LLH_Secound_song"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <ImageView
                android:src="@drawable/purple_music"
                style="@style/Image_height_width"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Secound_screen_Tv_text_2"
                android:layout_gravity="center_vertical"
                style="@style/music_name_textviews"/>
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/Secound_secreen_View_Color"/>
<!--third music-->
        <LinearLayout
            android:id="@+id/LLH_Third_song"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <ImageView
                android:src="@drawable/purple_music"
                style="@style/Image_height_width"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Secound_screen_Tv_text_3"
                android:layout_gravity="center_vertical"
                style="@style/music_name_textviews"
                />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/Secound_secreen_View_Color"/>
<!--fourth song-->
        <LinearLayout
            android:id="@+id/LLH_Fourth_song"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <ImageView
                android:src="@drawable/purple_music"
                style="@style/Image_height_width"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Secound_screen_Tv_text_4"
                android:layout_gravity="center_vertical"
                style="@style/music_name_textviews"/>
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/Secound_secreen_View_Color"/>
<!--fifth song-->
        <LinearLayout
            android:id="@+id/LLH_Fifth_song"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <ImageView
                android:src="@drawable/purple_music"
                style="@style/Image_height_width"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Secound_screen_Tv_text_5"
                android:layout_gravity="center_vertical"
                style="@style/music_name_textviews"/>
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/Secound_secreen_View_Color"
            android:layout_gravity="center_vertical"/>
<!--sixth song-->
        <LinearLayout
            android:id="@+id/LLH_Sixth_song"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <ImageView
                android:src="@drawable/purple_music"
                style="@style/Image_height_width"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Secound_screen_Tv_text_6"
                android:layout_gravity="center_vertical"
                style="@style/music_name_textviews"/>
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/Secound_secreen_View_Color"
            />
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/Secound_screen_Tv_text_Voice"
    android:textAllCaps="true"
    android:textColor="@color/Secound_Screen_Voices_TvColor"
    android:background="@color/Secound_Screen_Voices_BgColor"
    style="@style/Text_Size_Music_Voice"
    />
        <!--Record icon and pause icon-->
        <LinearLayout
            android:id="@+id/LLH_Record_pass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"

                android:src="@drawable/record_active"/>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:src="@drawable/black_pause"/>
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
<!--android:layout_marginBottom="40dp"-->