<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--Header for menu-->
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/Linear_h_back_color"
        style="@style/header_height">
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/back_arrow"
            style="@style/margint_top_image"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Third_screen_Tv_head_text"
            android:textColor="@color/Secound_Screen_Voices_TvColor"
            android:textAlignment="center"
            android:layout_weight="1"
            style="@style/Tile_style"/>
    </LinearLayout>
    <!--List of Alarams-->
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/Tird_screen_conthent_padding"
        style="@style/Third_screen_layout_height_LLH">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu_alarm_icon_purple"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Third_screen_Tv_Alarma_1"
            style="@style/Third_screen_Textviews_list"/>
    </LinearLayout>
<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/Tird_Screen_View_color"></View>
    <!--add new Alaram-->
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/Tird_screen_conthent_padding"
        style="@style/Third_screen_layout_height_LLH">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu_alarm_icon_purple"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Third_screen_Tv_Alarma_2"
            style="@style/Third_screen_Textviews_list"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Tird_Screen_View_color"></View>
    <!--Calander
     change calander icon size after
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/Tird_screen_conthent_padding"
        style="@style/Third_screen_layout_height_LLH">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu_calendar_icon_purple"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Third_screen_Tv_Calander"
            style="@style/Third_screen_Textviews_list"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Tird_Screen_View_color"></View>
    <!--Upload music-->
    <LinearLayout
        android:id="@+id/upLoadMusic"
        android:layout_width="match_parent"
        android:padding="@dimen/Tird_screen_conthent_padding"
        style="@style/Third_screen_layout_height_LLH"
        >
        <ImageView
            android:id="@+id/IvUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu_upload_file_icon_purple"
           />
        <TextView
            android:id="@+id/TvuploadMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Third_screen_Tv_Upload_music"
            style="@style/Third_screen_Textviews_list"
            android:onClick=""/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Tird_Screen_View_color"></View>
    <include
        android:id="@+id/includeFile"
        layout="@layout/include_file_design"
        />
    <!--Record icon -->
    <LinearLayout
        android:id="@+id/LLhRecord"
        android:layout_width="match_parent"
        android:padding="@dimen/Tird_screen_conthent_padding"
        style="@style/Third_screen_layout_height_LLH"
        android:onClick="recordScreenCalling">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:src="@drawable/menu_microphone_icon_purple"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Third_screen_Tv_Micro_phone"
            style="@style/Third_screen_Textviews_list"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Tird_Screen_View_color"></View>
    <!--Share inspiration-->
    <LinearLayout
        android:id="@+id/LLHshareInspieration"
        android:layout_width="match_parent"
        android:padding="@dimen/Tird_screen_conthent_padding"
        style="@style/Third_screen_layout_height_LLH">
        <ImageView
            android:id="@+id/IvShareInspiration"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:src="@drawable/menu_share_icon_purple"/>
        <TextView
            android:id="@+id/TvShrareInspiration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Third_screen_Tv_Share"
            style="@style/Third_screen_Textviews_list"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Tird_Screen_View_color"></View>
    <!--Combine sounds-->
    <LinearLayout
        android:id="@+id/llhCombineSounds"
        android:layout_width="match_parent"
        android:padding="@dimen/Tird_screen_conthent_padding"
        style="@style/Third_screen_layout_height_LLH"
        android:onClick="comBineSounds">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:src="@drawable/purple_active_merge"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/First_screen_title_view"
            style="@style/Third_screen_Textviews_list"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Tird_Screen_View_color"></View>
</LinearLayout>