<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--header par-->
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/Linear_h_back_color"
        style="@style/header_height">
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/back_arrow"
            style="@style/margint_top_image"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Fourt_screen_Title_text"
            android:textColor="@color/Secound_Screen_Voices_TvColor"
            android:textAlignment="center"
            android:layout_weight="1"
            style="@style/Tile_style"
            />
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/three_bars"
            style="@style/margint_top_image"/>
    </LinearLayout>
    <!--Layout horizontal-->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/color_theme"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Fourt_screen_Tv_Purple"
                style="@style/Textview_style_fourt_screen"
                android:textAlignment="textStart"

                />
            <View
                android:layout_height="30dp"
                android:layout_width="40dp"
                android:background="@color/Fourth_screen_view_purple"
                style="@style/View_arrange_fourth_screen"/>
            <ImageView
                android:layout_height="30dp"
                android:layout_width="40dp"
                android:layout_gravity="right|center_vertical|end"
                android:src="@drawable/tick_mark"
                android:layout_weight="1"
                />
            <!--android:layout_marginLeft="30dp"-->
        </TableRow>
        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Tird_Screen_View_color"
            />
        <TableRow>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/color_theme"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Fourt_screen_Tv_Blue"
                style="@style/Textview_style_fourt_screen"
                android:textAlignment="textStart"
                />
            <View
                android:layout_height="30dp"
                android:layout_width="40dp"
                android:background="@color/Fourth_screen_view_Blue"
                style="@style/View_arrange_fourth_screen"/>
        </TableRow>
        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Tird_Screen_View_color"
            />
<!--grey-->
        <TableRow>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/color_theme"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Fourt_screen_Tv_Grey"
                style="@style/Textview_style_fourt_screen"
                android:textAlignment="textStart"
                />
            <View
                android:layout_height="30dp"
                android:layout_width="40dp"
                android:background="@color/Fourth_screen_view_Gray"
                style="@style/View_arrange_fourth_screen"/>
        </TableRow>
        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Tird_Screen_View_color"
            />
        <!--candy Rose-->
        <TableRow>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/color_theme"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Fourt_screen_Tv_Candy_rose"
                style="@style/Textview_style_fourt_screen"
                android:textAlignment="textStart"
                />
            <View
                android:layout_height="30dp"
                android:layout_width="40dp"
                android:background="@color/Fourth_screen_view_Cyon_rose"
                style="@style/View_arrange_fourth_screen"/>
        </TableRow>

        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Tird_Screen_View_color"
            />
        <!--Persion green-->
        <TableRow>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/color_theme"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Fourt_screen_Tv_Persion_Green"
                style="@style/Textview_style_fourt_screen"
                android:textAlignment="textStart"
                />
            <View
                android:layout_height="30dp"
                android:layout_width="40dp"
                android:background="@color/Fourth_screen_view_Persion_green"
                style="@style/View_arrange_fourth_screen"/>
        </TableRow>
        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Tird_Screen_View_color"
            />
        <!--Eglippt_purple-->
        <TableRow>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/color_theme"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Fourt_screen_Tv_Eglipt_purple"
                style="@style/Textview_style_fourt_screen"
                android:textAlignment="textStart"
                />
            <View
                android:layout_height="30dp"
                android:layout_width="40dp"
                android:background="@color/Fourth_screen_view_Eglipt_purple"
                style="@style/View_arrange_fourth_screen"/>
        </TableRow>
        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Tird_Screen_View_color"
            />
    </TableLayout>
    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/save_btn_purple"
        android:text="@string/Fourt_screen_Bv_String"
        android:textColor="@color/Secound_Screen_Voices_TvColor"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        />

</LinearLayout>